[package]
name = "aci"
version = "0.1.2"
authors = ["CarterTS <carterplasek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chashmap = "2.2.2"
futures-channel = "0.3.8"
futures-util = "0.3.8"
tokio = {version="0.3.5", features = ["full"]}
tokio-tungstenite = "0.12.0"
serde_json = "1.0"
url = "2.0.0"